--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,13 +6,29 @@
     --red: #DB3A2A;
 }
 
+/* general */
 body {
     margin: 0;
+    background: var(--lightblue);
+    color: var(--navyblue);
 }
 
+p {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+}
+
+a {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+}
+
+/* side navigation desktop */
 .tabbar {
     height: 100%;
-    width: 324px;
+    width: 280px;
     left: 0px;
     top: 0px;
     z-index: 1;
@@ -30,8 +46,100 @@ body {
     font-family: Raleway;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5em;
     line-height: 28px;
     color: white;
     display: block;
+}
+
+/* top navigation */
+.topnav {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    left: 280px;
+    top: 0px;
+    box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
+    background: white;
+}
+
+.topnav p {
+    float: left;
+    display: block;
+    color: var(--navyblue);
+    text-align: center;
+    padding: 24px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+/* home content */
+#home h2 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: var(--navyblue);
+}
+
+#home h3 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.25em;
+    color: var(--navyblue);
+}
+
+.home-wrapper {  
+    margin-left: 280px;
+    margin-top: 80px;
+    max-width: 1172px;
+}
+
+.home-cases {
+    margin: 100px 0 0 40px;
+}
+
+.updates-box {
+    width: 424px;
+    height: 984px;
+    left: 1396px;
+    top: 80px;
+    float: right;
+    background: white;
+}
+
+.case-box {
+    width: 840px;
+    height: 80px;
+    left: 364px;
+    top: 198px;
+    margin-bottom: 24px;
+
+    background: white;
+    box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
+    border-radius: 20px;
+}
+
+.case-box p {
+    display: inline-block;
+    margin-right: 80px;
+    margin-left: 24px;
+}
+
+.service-box {
+    width: auto;
+    height: auto;
+    text-align: center;
+
+    background: white;
+    box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
+    border-radius: 20px;
+}
+
+.service-box p {
+    font-size: 1em;
 }
