--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,7 +69,7 @@ a {
     display: block;
     color: var(--navyblue);
     text-align: center;
-    padding: 24px;
+    padding: 16px;
     font-family: Raleway;
     font-style: normal;
     font-weight: bold;
@@ -83,6 +83,8 @@ a {
     font-weight: bold;
     font-size: 1.5em;
     color: var(--navyblue);
+    margin: 0;
+    display: inline-block;
 }
 
 #home h3 {
@@ -96,20 +98,37 @@ a {
 .home-wrapper {  
     margin-left: 280px;
     margin-top: 80px;
-    max-width: 1172px;
+    padding: 40px;
+    max-width: 840px;
 }
 
 .home-cases {
-    margin: 100px 0 0 40px;
+    margin: 0;
+    /* max-width: 840px; */
+}
+
+.home-cases a {
+    float: right;
 }
 
 .updates-box {
-    width: 424px;
+    width: 380px;
     height: 984px;
     left: 1396px;
     top: 80px;
     float: right;
     background: white;
+    padding: 40px 0 0 24px;
+}
+
+.update {
+    width: auto;
+    height: auto;
+    padding: 8px;
+
+    background: white;
+    box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
+    border-radius: 20px;
 }
 
 .case-box {
@@ -130,10 +149,21 @@ a {
     margin-left: 24px;
 }
 
+.home-services {
+    margin: 0;
+    /* max-width: 840px; */
+}
+
+.home-services a {
+    float: right;
+}
+
 .service-box {
-    width: auto;
+    width: 237px;
     height: auto;
+    padding: 16px;
     text-align: center;
+    float: left;
 
     background: white;
     box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
