--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,10 +125,23 @@ a {
     width: auto;
     height: auto;
     padding: 8px;
+    margin-bottom: 24px;
 
     background: white;
     box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
     border-radius: 20px;
+}
+
+.update img {
+    float: left;
+    width: 20%;
+    margin-right: 5%;
+    text-align: right;
+}
+
+.update p {
+    margin-left: 10%;
+    text-align: left;
 }
 
 .case-box {
