--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,10 +46,22 @@ a {
     font-family: Raleway;
     font-style: normal;
     font-weight: 600;
-    font-size: 1.5em;
+    font-size: 1.25em;
     line-height: 28px;
     color: white;
     display: block;
+}
+
+.tabbar a:hover {
+    opacity: .5;
+    transition: .3s;
+}
+
+.tabbar img {
+    width: 25%;
+    margin: 0 auto;
+    display: flex;
+    margin-bottom: 56px;
 }
 
 /* top navigation */
@@ -62,6 +74,10 @@ a {
     top: 0px;
     box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
     background: white;
+
+    display: flex; 
+    /* justify-content: center;  */
+    align-items: center;
 }
 
 .topnav p {
@@ -70,10 +86,22 @@ a {
     color: var(--navyblue);
     text-align: center;
     padding: 16px;
+
     font-family: Raleway;
     font-style: normal;
     font-weight: bold;
     font-size: 1em;
+}
+
+.topnav svg {
+    font-size: 1.5em; 
+    color: var(--navyblue);
+    padding: 8px;
+}
+
+.topnav svg:hover {
+    opacity: .5;
+    transition: .3s;
 }
 
 /* home content */
@@ -134,9 +162,10 @@ a {
 
 .update img {
     float: left;
-    width: 20%;
+    width: 14%;
     margin-right: 5%;
     text-align: right;
+    margin-top: 4%;
 }
 
 .update p {
@@ -162,13 +191,13 @@ a {
     margin-left: 24px;
 }
 
+.case-box span {
+    font-weight: bold;
+}
+
 .home-services {
     margin: 0;
     /* max-width: 840px; */
-}
-
-.home-services a {
-    float: right;
 }
 
 .service-box {
