--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,10 +25,28 @@ a {
     font-weight: normal;
 }
 
+h2 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: var(--navyblue);
+    margin: 0;
+    display: inline-block;
+}
+
+h3 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.25em;
+    color: var(--navyblue);
+}
+
 /* side navigation desktop */
 .tabbar {
     height: 100%;
-    width: 280px;
+    width: 264px;
     left: 0px;
     top: 0px;
     z-index: 1;
@@ -70,7 +88,7 @@ a {
     position: fixed;
     width: 100%;
     height: 80px;
-    left: 280px;
+    left: 264px;
     top: 0px;
     box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
     background: white;
@@ -105,26 +123,8 @@ a {
 }
 
 /* home content */
-#home h2 {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 1.5em;
-    color: var(--navyblue);
-    margin: 0;
-    display: inline-block;
-}
-
-#home h3 {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 1.25em;
-    color: var(--navyblue);
-}
-
 .home-wrapper {  
-    margin-left: 280px;
+    margin-left: 264px;
     margin-top: 80px;
     padding: 40px;
     max-width: 840px;
