--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,7 +104,7 @@ h4 {
     align-items: center;
 }
 
-.topnav p {
+.topnav-elements p {
     float: left;
     display: block;
     color: var(--navyblue);
@@ -117,13 +117,17 @@ h4 {
     font-size: 1em;
 }
 
-.topnav svg {
+.topnav-elements {
+    float: right;
+}
+
+.topnav-elements svg {
     font-size: 1.5em; 
     color: var(--navyblue);
     padding: 8px;
 }
 
-.topnav svg:hover {
+.topnav-elements svg:hover {
     opacity: .5;
     transition: .3s;
 }
@@ -133,21 +137,16 @@ h4 {
     display: inline-block;
 }
 
-/* cases content */
-#cases h2 {
-    display: inline-block;
-}
-
 .home-wrapper {  
     margin-left: 264px;
-    margin-top: 80px;
+    /* margin-top: 80px; */
     padding: 40px;
-    max-width: 840px;
+    /* max-width: 840px; */
 }
 
 .home-cases {
     margin: 0;
-    /* max-width: 840px; */
+    max-width: 840px;
 }
 
 .home-cases a {
@@ -212,7 +211,7 @@ h4 {
 
 .home-services {
     margin: 0;
-    /* max-width: 840px; */
+    max-width: 840px;
 }
 
 .service-box {
@@ -231,10 +230,15 @@ h4 {
     font-size: 1em;
 }
 
+/* cases content */
+#cases h2 {
+    display: inline-block;
+}
+
 /* profile content */
 .profile-wrapper {  
     margin-left: 264px;
-    margin-top: 80px;
+    /* margin-top: 80px; */
     padding: 40px;
 }
 
@@ -320,3 +324,81 @@ h4 {
     margin-right: 24px;
     margin-bottom: 24px;
 }
+
+.personal-data button {
+    float: right;
+    margin-top: 24px;
+    padding: 16px 32px;
+    width: auto;
+    height: auto;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1em;
+    border: none;
+
+    color: white;
+    background: var(--green);
+    border-radius: 32px;
+}
+
+
+.header {
+    clear: both;
+    height: 80px;
+    /* position: fixed; */
+    left: 264px;
+    top: 0px;
+
+    background: white; 
+    box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
+    /* display: flex;  */
+    align-items: center;
+}
+    
+#navlist {
+    float: right;
+    display: flex;
+    align-items: center;
+    padding: 24px;
+    margin: 0 auto;
+}
+
+.topnav-icon {
+    font-size: 1.75em; 
+    color: var(--navyblue);
+    margin-right: 16px;
+}
+
+.topnav-icon:hover {
+    opacity: .5;
+    transition: .3s;
+    cursor: pointer;
+}
+      
+      
+li {
+    display: inline;
+    list-style-type: none;
+}
+
+#active {
+    color: var(--navyblue);
+    text-align: center;
+    margin-right: 40px;
+
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1em;
+}
+      
+  
+  
+  
+  
+  
+  
+  
+  
+  
