--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ a {
 }
 
 h2 {
-    font-family: Roboto;
+    font-family: Raleway;
     font-style: normal;
     font-weight: bold;
     font-size: 1.5em;
@@ -35,11 +35,12 @@ h2 {
 }
 
 h3 {
-    font-family: Roboto;
+    font-family: Raleway;
     font-style: normal;
     font-weight: bold;
     font-size: 1.25em;
     color: var(--navyblue);
+    margin: 0;
 }
 
 h4 {
@@ -132,17 +133,20 @@ h4 {
     transition: .3s;
 }
 
+.wrapper {
+    margin-left: 264px;
+    padding: 32px;
+}
+
 /* home content */
 #home h2 {
     display: inline-block;
 }
 
-.home-wrapper {  
+/* .home-wrapper {  
     margin-left: 264px;
-    /* margin-top: 80px; */
     padding: 40px;
-    /* max-width: 840px; */
-}
+} */
 
 .home-cases {
     margin: 0;
@@ -237,11 +241,10 @@ h4 {
 }
 
 /* profile content */
-.profile-wrapper {  
+/* .profile-wrapper {  
     margin-left: 264px;
-    /* margin-top: 80px; */
     padding: 40px;
-}
+} */
 
 .profile-nav {
     width: auto;
@@ -394,12 +397,93 @@ li {
     font-size: 1em;
 }
       
-  
-  
-  
-  
-  
-  
-  
-  
-  
+/*case example*/
+#cases h3 {
+    margin: 0;
+}
+
+.advisor-info {
+    width: 100%;
+    height: 80px;
+    left: 364px;
+    top: 198px;
+    margin: 24px 0;
+
+    background: white;
+    border-radius: 20px;
+}
+
+.advisor-info p {
+    display: inline-block;
+    margin-right: 108px;
+    margin-left: 24px;
+}
+
+.advisor-info span {
+    font-weight: bold;
+}
+
+.files-container {
+    width: 40%;
+    height: auto;
+    float: left;
+    margin-right: 24px;
+}
+
+.files-white-box {
+    width: 100%;
+    height: 648px;
+    padding: 12px 12px 0 12px;
+
+    background: white;
+    border-radius: 20px;
+}
+
+.file-example {
+    width: auto;
+    height: 48px;
+    padding: 0 10px;
+    margin-bottom: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background: white;
+    box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
+    border-radius: 20px;
+}
+
+.file-example p {
+    display: inline-block;
+    margin-right: 48px;
+}
+
+.calendar-container {
+    width: 25%;
+    height: auto;
+    float: left;
+    margin: 0 16px;
+}
+
+.calendar-white-box {
+    width: 100%;
+    height: 648px;
+    /* padding: 24px 16px; */
+
+    background: white;
+    border-radius: 20px;
+}
+
+.chat-container {
+    width: 30%;
+    height: auto;
+    float: left;
+}
+
+.chat-box {
+    width: 100%;
+    height: 648px;
+
+    background: white;
+    border-radius: 20px;
+}
