--- a/stylesheet.css
+++ b/stylesheet.css
@@ -574,7 +574,54 @@ li {
     width: 100%;
     height: 648px;
     margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     background: white;
     border-radius: 20px;
+}
+
+.chat-box img {
+    width: 12%;
+    float: left;
+}
+
+.message-box {
+    width: 340px;
+    display: flex;
+    align-items: center;
+    margin-bottom: -440px;
+    margin-top: auto;
+}
+
+.message-text {
+    width: 280px;
+    margin-left: 16px;
+    padding: 16px;
+
+    background: white;
+    box-shadow: 0px 5px 8px rgb(0 67 101 / 25%);
+    border-radius: 32px;
+}
+
+.message-text p {
+    margin: 0;
+}
+
+.message-input {
+    width: 324px;
+    padding: 12px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1em;
+    color: var(--navyblue);
+    margin-top: auto;
+    margin-bottom: 16px;
+
+    background: white;
+    box-shadow: inset 0px 5px 8px rgba(0, 67, 101, 0.25);
+    border-radius: 20px;
+    border: none;
 }
