--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,7 @@ h4 {
     width: 264px;
     left: 0px;
     top: 0px;
-    z-index: 1;
+    z-index: 100;
     position: fixed;
     overflow-x: hidden;
     padding-top: 56px;
@@ -96,6 +96,7 @@ h4 {
     position: fixed;
     top: 0px;
     width: 100%;
+    z-index: 99;
     /* left: 264px;
     display: flex;  
     align-items: center;*/
@@ -201,11 +202,25 @@ li {
     margin: 0;
 }
 
+.toggle-btn {
+    display: flex;
+    align-items: center;
+    margin-top: -14px;
+    float: right;
+}
+
+.toggle-btn p {
+    font-weight: 500;
+}
+
 .switch {
     position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+    /* display: inline-block; */
+    float: right;
+    width: 48px;
+    height: 24px;
+    margin-left: 16px;
+    z-index: 0;
   }
   
   .switch input { 
@@ -229,27 +244,27 @@ li {
   .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 18px;
+    width: 18px;
     left: 4px;
-    bottom: 4px;
+    bottom: 3px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: var(--navyblue);
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px var(--navyblue);
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(22px);
+    -ms-transform: translateX(22px);
+    transform: translateX(22px);
   }
   
   /* Rounded sliders */
@@ -669,4 +684,57 @@ li {
     box-shadow: inset 0px 5px 8px rgba(0, 67, 101, 0.25);
     border-radius: 20px;
     border: none;
+}
+
+/* member club */
+#memberclub h3 {
+    margin: 0 0 8px 0;
+}
+
+.gratis-services-box {
+    width: 400px;
+    height: 984px;
+    float: right;
+    /* background: white; */
+    padding: 70px 16px 0 16px;
+}
+
+.service-example {
+    width: auto;
+    height: auto;
+    padding: 16px;
+    margin-bottom: 16px;
+    /* display: flex;
+    align-items: center; */
+
+    background: white;
+    /* box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25); */
+    border-radius: 20px;
+}
+
+.service-example img {
+    float: left;
+    width: 108px;
+    margin-right: 12px;
+}
+
+.service-example p {
+    text-align: left;
+    margin: 0;
+}
+
+.discounts-container, .test-container {
+    margin: 0;
+    max-width: 840px;
+    /* display: flex;
+    flex-direction: row; */
+}
+.discount-example, .test-example {
+    width: 196px;
+    height: 196px;
+    display: inline-block;
+    margin-right: 8px;
+
+    background: white;
+    border-radius: 32px;
 }
