--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,31 +51,7 @@ h4 {
 }
 
 /* side navigation desktop */
-.tabbar {
-    height: 100%;
-    width: 264px;
-    left: 0px;
-    top: 0px;
-    z-index: 100;
-    position: fixed;
-    overflow-x: hidden;
-    padding-top: 56px;
-    background: var(--navyblue);
-    box-shadow: 5px 0px 8px rgba(0, 67, 101, 0.25);
-}
 
-.tabbar a {
-    padding-left: 40px;
-    padding-bottom: 32px;
-    text-decoration: none;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.25em;
-    line-height: 28px;
-    color: white;
-    display: block;
-}
 
 .tabbar a:hover {
     opacity: .5;
@@ -167,16 +143,6 @@ li {
 /* .home-cases a {
     float: right;
 } */
-
-.updates-box {
-    width: 380px;
-    height: 984px;
-    /* left: 1396px;
-    top: 80px; */
-    float: right;
-    background: white;
-    padding: 32px 16px 0 16px;
-}
 
 .update {
     width: auto;
@@ -788,4 +754,103 @@ li {
 .article-example h4 {
     font-size: 1.25em;
     margin: 16px 0 0 0;
+}
+
+@media (min-width: 768px) {
+    .tabbar {
+        height: 100%;
+        width: 264px;
+        left: 0px;
+        top: 0px;
+        z-index: 100;
+        position: fixed;
+        overflow-x: hidden;
+        padding-top: 56px;
+        background: var(--navyblue);
+        box-shadow: 5px 0px 8px rgba(0, 67, 101, 0.25);
+    }
+    
+    .tabbar a {
+        padding-left: 40px;
+        padding-bottom: 32px;
+        text-decoration: none;
+        font-family: Raleway;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 1.25em;
+        line-height: 28px;
+        color: white;
+        display: block;
+    }
+
+    .nav-icon {
+        font-size: 1.5em; 
+        color: white; 
+        /* margin: 0;  */
+        padding: 0; 
+        vertical-align: bottom;
+        margin-right: 16px;
+    }
+    
+    .updates-box {
+        width: 380px;
+        height: 984px;
+        /* left: 1396px;
+        top: 80px; */
+        float: right;
+        background: white;
+        padding: 32px 16px 0 16px;
+    }
+}
+
+/* mobile screen */
+@media (max-width: 375px) {
+    .page {
+        min-height: calc(100vh - 110px);
+        animation: fadeIn 0.4s;
+        padding: 55px 0;
+    }
+
+    .tabbar {
+        background: var(--navyblue);
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 9999;
+        text-align: center;
+    }
+
+    .tabbar a {
+        display: inline-block;
+        text-align: center;
+        color: white;
+        padding: 8px 16px;
+        text-decoration: none;
+        font-size: 1em;
+    }
+
+    .nav-icon {
+        display: flex;
+        margin: 0 auto;
+        font-size: 2em;
+    }
+
+    .tabbar img {
+        display: none;
+    }
+
+    .wrapper {
+        display: none;
+    }
+
+    .header {
+        display: none;
+    }
+
+    .updates-box {
+        height: 724px;
+        float: right;
+        padding: 32px 16px 0 16px;
+    }
 }
