--- a/stylesheet.css
+++ b/stylesheet.css
@@ -702,36 +702,6 @@ li {
     margin: 8px 0;
 }
 
-.articles-container {
-    max-width: 1255px;
-    margin: 24px 0 0 0;
-}
-
-.article-example {
-    width: 268px;
-    height: 348px;
-    margin-right: 8px;
-    padding: 16px;
-    float: left;
-    /* display: inline-block; */
-    text-align: center;
-
-    background: white;
-    border-radius: 30px;
-}
-
-.article-example img {
-    text-align: center;
-    max-width: 268px;
-
-    border-radius: 30px;
-}
-
-.article-example h4 {
-    font-size: 1.25em;
-    margin: 16px 0 0 0;
-}
-
 /* desktop screen */
 @media (min-width: 768px) {
     .tabbar {
@@ -819,6 +789,41 @@ li {
     .test-container {
         margin-top: 16px;
     }
+
+    .articles-flexbox {
+        display: flex; 
+        justify-content: space-between;
+    }
+
+    .articles-container {
+        max-width: 1255px;
+        margin: 24px 0 0 0;
+    }
+    
+    .article-example {
+        width: 268px;
+        height: 348px;
+        margin-right: 8px;
+        padding: 16px;
+        float: left;
+        /* display: inline-block; */
+        text-align: center;
+    
+        background: white;
+        border-radius: 30px;
+    }
+    
+    .article-example img {
+        text-align: center;
+        max-width: 268px;
+    
+        border-radius: 30px;
+    }
+    
+    .article-example h4 {
+        font-size: 1.25em;
+        margin: 16px 0 0 0;
+    }
 }
 
 /* mobile screen */
@@ -850,7 +855,7 @@ li {
         height: 100%;
         margin-top: 24px;
 
-        background: #FFFFFF;
+        background: white;
         border-radius: 20px;
     }
 
@@ -958,7 +963,7 @@ li {
         padding: 16px;
         margin-bottom: 16px;
 
-        background: #FFFFFF;
+        background: white;
         box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
         border-radius: 32px;
     }
@@ -979,7 +984,7 @@ li {
         display: none;
     }
 /* mobile member club*/
-    .gratis-services-box, .articles-container {
+    .gratis-services-box {
         display: none;
     }
 
@@ -996,5 +1001,41 @@ li {
 
     .test-container {
         margin-top: 24px;
+    }
+
+    .articles-container {
+        padding-right: 16px;
+        margin-top: 24px;
+    }
+
+    .article-example {
+        width: 328px;
+        height: 140px;
+        padding: 8px;
+        margin-bottom: 24px;
+        text-align: left;
+
+        background: white;
+        border-radius: 20px;
+    }
+
+    .article-example br {
+        display: none;
+    }
+
+    .article-example img {
+        float: left;
+        height: 132px;
+        width: 132px;
+        border-radius: 20px;
+    }
+
+    .article-example h4 {
+        font-size: 1em;
+        margin: 0;
+    }
+
+    .article-example p {
+        margin: 0;
     }
 }
