--- a/stylesheet.css
+++ b/stylesheet.css
@@ -323,17 +323,6 @@ li {
     font-size: 2em;
 }
 
-.personal-data {
-    width: 768px;
-    height: 524px;
-    /* height: 842px; */
-    padding: 24px 16px;
-    float: left;
-
-    background: white;
-    border-radius: 20px;
-}
-
 .personal-data label {
     font-size: 1em;
     font-family: Raleway;
@@ -764,6 +753,10 @@ li {
         border-radius: 20px;
     }
 
+    .profile-nav a {
+        display: none;
+    }
+
     .profile-element {
         width: 324px;
         height: auto;
@@ -783,6 +776,17 @@ li {
         box-shadow: inset 0px 5px 8px rgba(0, 67, 101, 0.25);
         transition: .7s;
         cursor: pointer;
+    }
+
+    .personal-data {
+        width: 768px;
+        height: 524px;
+        /* height: 842px; */
+        padding: 24px 16px;
+        float: left;
+    
+        background: white;
+        border-radius: 20px;
     }
 
     /* member club */
@@ -979,10 +983,6 @@ li {
         padding-bottom: 12px;
     }
 
-/* mobile profile */
-    .personal-data {
-        display: none;
-    }
 /* mobile member club*/
     .gratis-services-box {
         display: none;
@@ -1038,4 +1038,27 @@ li {
     .article-example p {
         margin: 0;
     }
+
+    .reversed {
+        display: none;
+    }
+
+    .personal-data {
+        width: 100%;
+        height: 100%;
+        margin-top: 24px;
+    
+        background: white;
+        border-radius: 20px;
+    }
+
+    .personal-data input {
+        width: 287px;
+    }
+
+    .personal-data span {
+        margin: 0;
+        padding: 8px 16px;
+    }
+
 }
